overflow fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -25,6 +25,7 @@ body {
 #root {
   width: 100%;
   position: relative;
+  overflow-x: hidden;
 
   #alert {
     display: none;
@@ -36,6 +37,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    overflow-x: hidden;
   }
 }
 
